config/templates/pushprox-proxy/pushprox-proxy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pushprox-proxy
  name: pushprox-proxy
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: pushprox-proxy
    deployment: pushprox-proxy
  sessionAffinity: None
  type: ClusterIP
