config/templates/pushprox-proxy/pushprox-proxy-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: pushprox-proxy
  name: pushprox-proxy
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: pushprox-proxy
    weight: 100
  wildcardPolicy: None
status:
  ingress: []
